[FIX]collapse bar

--- a/src/App.css
+++ b/src/App.css
@@ -31,3 +31,7 @@ p,h6,i,div{
 .bottom-margin {
   margin-bottom: 50px;
 }
+
+.navbar-nav{
+  flex-direction: column;
+}
